test/classes/ferguson/forwarding/d-duplicate.good
d-duplicate.chpl:18: error: ambiguous call 'Wrapper.foo()'
d-duplicate.chpl:2: note: candidates are: Wrapper.foo()
d-duplicate.chpl:3: note:                 Wrapper.foo()
